syntax = "proto3";

// The Dynamic Measure service definition.
service ResilienceMeasure {
  // Sends a greeting
  rpc RunDynamicMeasure (DynamicMeasureRequest) returns (DynamicMeasureReply) {}
}

// The request message containing the user's name.
message DynamicMeasureRequest {
  int32 measureType = 1;
  string data = 2;
}

// The response message containing the greetings
message DynamicMeasureReply {
  string message = 1;
}
